# fastapi-template

./: README.md  cookiecutter.json  docker-compose.yml
backend/: .env.example  Dockerfile  lint.sh  setup.cfg
backend/models/: __init__.py  base.py
backend/schemas/orm/: base.py
migrations/: env.py
{{cookiecutter.service_name}}/: .gitignore  alembic.ini
{{cookiecutter.service_name}}/backend/: pyproject.toml
{{cookiecutter.service_name}}/backend/core/: application.py  config.py  urls.py
{{cookiecutter.service_name}}/backend/crud/: crud_base.py
{{cookiecutter.service_name}}/backend/db/: database.py  settings.py
{{cookiecutter.service_name}}/migrations/versions/: 2022-12-07-13- 9_62196067116f_init_db.py
